[package]
name = "piet-dx12"
version = "0.0.0"
authors = ["Raph Levien <raph.levien@gmail.com>", "Brian Merchant <bhmerchant@gmail.com>"]
description = "A Metal-based renderer for the piet 2D graphics abstraction."
license = "MIT/Apache-2.0"
edition = "2018"
keywords = ["graphics", "2d"]
categories = ["rendering::graphics-api"]

[dependencies]
winapi = { version = "0.3.*", features = ["winuser", "libloaderapi", "shellscalingapi", "d3d12sdklayers"] }
wio = "0.2.*"
d3d12 = "0.1.*"